--- a/style.css
+++ b/style.css
@@ -14,7 +14,30 @@ body {
   background-color: #373e57;
   color: #ccc8db;
 }
+footer {
+    background-color: #222;
+    color: #fff;
+    font-size: 14px;
+    bottom: 0;
+    position: fixed;
+    left: 0;
+    right: 0;
+    text-align: center;
+    z-index: 999;
+}
 
+footer p {
+    margin: 10px 0;
+}
+
+footer i {
+    color: red;
+}
+
+footer a {
+    color: #3c97bf;
+    text-decoration: none;
+}
 .container {
   background-color: #151728;
   display: flex;
